fixing scrolling on mobile

--- a/multiplayer/public/cursors/style.css
+++ b/multiplayer/public/cursors/style.css
@@ -1,10 +1,8 @@
 body {
-    height: 100vh;
-    margin: 0;
     background-color: aliceblue;
     overflow: hidden;
     cursor: none;
-    touch-action: none;
+    /* touch-action: none; */
 }
 
 img {
